# Shine

./: .gitignore  CMakeLists.txt  README.md
kerbal/: connection.cpp  connection.h  globals.h  math.cpp  math.h
shine-curses/: display_manager.cpp  display_manager.h  main.cpp  module_menu.cpp  module_menu.h
shine-curses/kerbal_tools/: autopilot.cpp  autopilot.h
